style: fix break-word overflow in message box.

--- a/assets/sass/fractal6.scss
+++ b/assets/sass/fractal6.scss
@@ -732,6 +732,10 @@ span[data-tooltip] {
         color: var(--text-light) !important;
         background-color: var(--comment-header-background-color);
     }
+
+    .message-body {
+        overflow-wrap: break-word;
+    }
 }
 .acc {
     .message-header {
